tests/suppress/suppress.exp
Error: A.js:16
 16: var test4: string = 123; // This error is NOT suppressed
                         ^^^ number. This type is incompatible with
 16: var test4: string = 123; // This error is NOT suppressed
                ^^^^^^ string

Error: versions.js:7
  7: (123: string); // should not be suppressed
      ^^^ number. This type is incompatible with
  7: (123: string); // should not be suppressed
           ^^^^^^ string

Warning: A.js:14
 14: // $FlowFixMe Error unused suppression
     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Error suppressing comment. Unused suppression


Found 2 errors and 1 warning
